# shipay_backend_challenge

./: .coveragerc  .env.example  .env.exemple  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: database.py  main.py  models.py  schemas.py  seed.py
app/configs/: configs.py  constants.py
app/factories/modules/: make_auth_router.py  make_claim_router.py  make_role_router.py  make_user_router.py
app/guards/: check_admin_role.py  get_current_user.py  require_claim.py
app/infra/auth/: password.py  security.py
app/infra/db/: db.py
app/interfaces/: password_helper.py
app/interfaces/modules/: auth_router.py  claim_router.py  role_router.py  user_router.py
app/modules/auth/: auth.py
app/modules/claims/: claims.py
app/modules/roles/: roles.py
app/modules/users/: users.py
app/shared/: depends.py
app/utils/: utils.py
docs/: routes.md
migrations/: env.py
tests/: conftest.py  test_app.py  test_main.py  test_models.py
tests/factories/modules/: test_make_auth_router.py  test_make_claim_router.py  test_make_role_router.py  test_make_user_router.py
tests/guards/: test_check_admin_role.py  test_get_current_user.py  test_required_claim.py
tests/infra/auth/: test_security.py
tests/infra/db/: test_db.py
tests/modules/: test_auth.py  test_auth_blacklist_exceptions.py  test_claims.py  test_roles.py  test_users.py
tests/modules/auth/: test_login.py  test_logout.py  test_refresh_token.py  test_token.py
tests/modules/claims/: test_create_claim.py  test_delete_claim.py  test_find_claim_by_id.py  test_find_many_claims.py
tests/modules/roles/: test_create_role.py  test_delete_role.py  test_get_many_role.py  test_get_role_by_id.py  test_update_role.py
tests/modules/users/: test_create_user.py  test_delete_user.py  test_delete_user_claim.py  test_find_many_users.py  test_find_user_by_id.py  test_update_user.py  (+1 more)
tests/utils/: test_utils.py
(+2 files in other folders)
